--- a/wwr/rafting.css
+++ b/wwr/rafting.css
@@ -14,15 +14,19 @@ header a{
     justify-content: right;
 }
 
-main h1, h2, p, a, .hero img {
+main h1, h2, p, a {
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding-left: 200px;
     padding-right: 200px;
 }
 
+.hero div {
+    position: relative;
+}
+
 .hero img {
-    justify-content: center;
+    justify-content: right;
     display: block;
     margin: auto;
 }
