--- a/wwr/rafting.css
+++ b/wwr/rafting.css
@@ -1,24 +1,80 @@
-header {
-    background-color: #D8DBE2;
-    display: inline-flex;
-    align-items: center;
-    width: 100%;
-
+body {
+    font-family: Georgia, 'Arial', Times, serif;
+    margin: 0;
 }
 
-header a{
+a {
     text-decoration: none;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: black;
-    padding-right: 4px;
-    justify-content: right;
 }
 
-main h1, h2, p, a {
+header {
+	display: grid;
+	grid-template-columns: 120px 1fr 2fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 100%;
+    background-color: #D8DBE2;
+}
+
+header img {
+	margin: 0 0.25rem 0 1rem;
+	width: 80px;
+	height: auto;
+}
+
+header nav {
+	text-align: right;
+}
+
+.navigation {
+	display: flex;
+	list-style: none;
+}
+
+.navigation li {
+	flex: 1 1 100%;
+}
+
+.navigation a {
+	display: block;
+	color: black;
+	padding: 10px;
+	text-decoration: none;
+}
+
+.navigation a:hover {
+	color: #373F51;
+	font-weight: 700;
+}
+
+main .hero {
+    display: flex;
+    padding: 10px;
+}
+
+main article {
+    padding: 20px;
+}
+
+main h1, main h2 {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-left: 200px;
-    padding-right: 200px;
+}
+
+main .hero3 {
+    display: flex;
+    padding-right: 25px;
+    padding-left: 25px;
+    padding-bottom: 25px;
+    align-items: center;
+}
+
+main .hero3 img {
+    max-width: 350px;
+    padding: 25px;
+}
+
+main .hero img {
+    max-width: 400px;
 }
 
 .hero div {
@@ -31,26 +87,42 @@ main h1, h2, p, a {
     margin: auto;
 }
 
-.hero2 img {
-    justify-content: center;
-    display: inline-block;
-    margin: auto;
-    padding-bottom: 30px;
+.hero2 div {
+    display: flex;
+    margin-bottom: 20px;
 }
 
-footer {
+figure {
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 220px;
+    margin: auto;
+  }
+  
+figure img {
+    max-width: 220px;
+    max-height: 150px;
+  }
+  
+figcaption {
     background-color: #373F51;
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 3px;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 15px;
+  }
+  
+footer {
+    background-color:#373F51;
+    display: flex;
+    align-items: center;
+    padding: 20px;
     color: white;
 }
 
-.sociallinks a{
-    display: contents;
-    text-decoration: none;
-}
-
-.sociallinks img {
-    padding-right: 15px;
+.footer {
+    display: flex;
+    align-items: center;
 }
