--- a/styles/rafting.css
+++ b/styles/rafting.css
@@ -112,13 +112,23 @@ figcaption {
   
 footer {
     background-color:#373F51;
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
     padding: 20px;
     color: white;
+    align-items: center;
 }
 
 .footer {
-    display: flex;
-    align-items: center;
+    grid-column: 2;
+    grid-row: 1;
+    text-align: center;
 }
+
+.footerimg  {
+    grid-column: 3;
+    grid-row: 1;
+    margin-left: auto;
+}
+
