--- a/styles/rafting.css
+++ b/styles/rafting.css
@@ -155,3 +155,28 @@ footer {
     margin-left: auto;
 }
 
+.sociallinks img {
+    padding-right: 10px;
+}
+
+.visitus {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 20px;
+    align-items: center;
+}
+
+.contactinformation {
+    grid-column: 1;
+    grid-row: 1;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+}
+
+.map {
+    grid-column: 2;
+    grid-row: 1;
+    max-width: 200px;
+}
