--- a/styles/rafting.css
+++ b/styles/rafting.css
@@ -261,7 +261,7 @@ footer {
 }
 
 .visit {
-    background-color: var(--third-color);;
+    background-color: var(--third-color);
     color: white;
 }
 
@@ -284,7 +284,7 @@ footer {
     grid-column: 2;
     grid-row: 2;
     text-align: center;
-    border: 5px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--secondary-color);
     border-radius: 0.5rem;
     color: white;
 }
@@ -312,14 +312,14 @@ footer {
 .heroindex p {
     display: grid;
     justify-content: center;
-    font-size: 20px;
+    font-size: 35px;
 }
 
 .heroindex h1 {
     padding-top: 100px;
     margin-top: 0;
     margin-bottom: 50px;
-    font-size: 50px;
+    font-size: 100px;
 }
 
 .calltoactionone {
