--- a/styles/rafting.css
+++ b/styles/rafting.css
@@ -250,6 +250,14 @@ footer {
     text-align: center;
 }
 
+#enlace {
+    grid-column: 2;
+    grid-row: 1;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+}
+
 .footer a {
     text-decoration: none;
     color: white;
